--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cc19?schema=public"
+# DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cc19?schema=public"
