--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,17 @@
     "daisyui": "^4.12.23",
     "lucide-react": "^0.474.0",
     "react": "^18.2.0",
+    "react-date-picker": "^11.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-js-banner": "^0.7.2",
     "react-leaflet": "^4.2.1",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.2.0",
+    "react-snowfall": "^2.2.0",
     "react-toastify": "^11.0.5",
+    "react-transition-group": "^4.4.5",
     "sweetalert2": "^11.15.10",
     "zod": "^3.24.1",
     "zustand": "^4.4.7"
