--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.14.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
@@ -12,7 +12,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
-    "prisma": "^6.3.1",
     "sweetalert2": "^11.17.2",
     "zod": "^3.24.1"
   },
@@ -28,6 +27,9 @@
     "prisma:generate": "prisma generate",
     "db:seed": "node prisma/seed.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wathanyuok/cc19-front-to-back-api.git"
@@ -40,6 +42,7 @@
   },
   "homepage": "https://github.com/wathanyuok/cc19-front-to-back-api#readme",
   "devDependencies": {
+    "prisma": "^6.14.0",
     "prisma-erd-generator": "^2.0.4"
   }
 }
